Fix not being able to log in using GCPW when no valid domains are specified.

Bug: 917013
Change-Id: I507b86df507bc74886f76d70e168cb0350f785c0
Reviewed-on: https://chromium-review.googlesource.com/c/1387146
Commit-Queue: Tien Mai <tienmai@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618290}
Former-commit-id: fb619aa67694b41e32bbc6e4ce0f859b0f437723